# nexus

./: .env_template  .gitignore  Cargo.toml  LICENSE  README.md  configuration.md  db_from_visualization.sql  go.mod  main.session.sql  querySnippets.sql
app/: go.mod  nexus.go
app/fragments/fetcher/: main.html
app/fragments/viewer/: main.html
app/public/: index.html  viewer.js
app/public/fetcher/: index.html
app/public/viewer/: index.html
cmd/web/: db.go  handlers.go  main.go  utils.go
cmd/web/static/: index.html
cmd/web/static/fragments/: startpage-main.html
cmd/web/static/scripts/: fullscreenViewer.js  main.js  viewer.js
cmd/web/static/stylesheets/: style.css
cmd/web/templates/: fetcher.html  startpage.html  trial-fullview.html  viewer.html
config/: configuration.md
configs/: configuration.md
db/migrations/: 0001_trials_images.sql  0003_manual_reading.sql
db/scripts/: sql_migration_generator.py
examples/: quick_dev.rs
scripts/: package.json  sqlinserter.js
scripts/node/: python_script_dependencies.md  sqlinserter.js
scripts/sql/: exported_visualized_db.sql  init.sql  querySnippets.sql
sql/: db.sql  init.sql  querySnippets.sql
src/: error.rs  helpers.rs  main.rs  model.rs
src/handlers/: fullscreen.rs  image_request.rs  mod.rs  startpage.rs  user_image_data.rs  viewer.rs
static/scripts/: fetcher.js  fullscreenViewer.js  main.js
static/stylesheets/: style.css
templates/: fetcher.html  fullscreen.html  image_request.html  startpage.html  viewer.html
